--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,14 @@ php:
   - 5.6
   - 7.0
 
-sudo: false
+sudo: required
+services: mysql
 
 before_script:
+  - cp .env.travis .env
+  - mysql -e 'create database homestead_test;'
   - composer self-update
-  - composer install --prefer-source --no-interaction --dev
+  - composer install --no-interaction"
 
 script:
   - vendor/bin/phpunit --verbose --coverage-clover build/logs/clover.xml
