--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_script:
   - cp .env.travis .env
   - mysql -e 'create database homestead_test;'
   - composer self-update
-  - composer install --no-interaction"
+  - composer install 
 
 script:
   - vendor/bin/phpunit --verbose --coverage-clover build/logs/clover.xml
