--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.1.*"
+        "laravel/framework": "5.1.*",
+        "laravelcollective/html": "5.1.*",
+        "ramsey/uuid": "^3.5",
+        "intervention/image": "^2.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -19,7 +22,7 @@
             "database"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "EventApp\\": "app/"
         }
     },
     "autoload-dev": {
