--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravelcollective/html": "5.1.*",
         "ramsey/uuid": "^3.5",
         "intervention/image": "^2.3",
-        "barryvdh/laravel-debugbar": "^2.2"
+        "barryvdh/laravel-debugbar": "^2.2",
+        "recca0120/laravel-payum": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
