--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "intervention/image": "^2.3",
         "barryvdh/laravel-debugbar": "^2.2",
         "ignited/laravel-omnipay": "^2.2",
-        "omnipay/paypal": "^2.6"
+        "omnipay/paypal": "^2.6",
+        "barryvdh/laravel-dompdf": "^0.7.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
